testsuite/tests/rename/should_fail/T5372.stderr

T5372.hs:4:11: error:
    Not in scope: data constructor ‘MkS’
    Suggested fix: Perhaps use ‘T5372a.MkS’ (imported from T5372a)
